--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,15 @@ body {
   overflow-x: hidden;
 }
 
+pre {
+  padding: 1rem;
+  display: block;
+  overflow-x: auto;
+  color: rgb(221, 221, 221);
+  font-size: 13px;
+  line-height: 1.4;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   backdrop-filter: blur(10px);
